<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fon_math"
    android:padding="8dp"
    tools:context="com.example.presentation.fragments.ChooseTaskFragment" >

    <androidx.cardview.widget.CardView
        android:id="@+id/bt_Test"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:elevation="10dp"
        app:cardCornerRadius="20dp"
        app:cardElevation="10dp"
        app:cardMaxElevation="10dp"
        app:layout_constraintBottom_toTopOf="@+id/btE"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView6"
        app:layout_constraintVertical_chainStyle="packed">


        <Button
            android:id="@+id/bTP"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/test_color"
            android:fontFamily="@font/funny_font"
            android:text="@string/tx_plus"
            android:textColor="@color/white"
            android:textSize="30sp" />
    </androidx.cardview.widget.CardView>

<androidx.cardview.widget.CardView
android:id="@+id/btE"
android:layout_height="wrap_content"
android:layout_marginBottom="8dp"
android:layout_width="match_parent"
app:cardCornerRadius="20dp"
app:layout_constraintBottom_toTopOf="@+id/bt_Medium"
app:layout_constraintEnd_toEndOf="@+id/bt_Medium"
app:layout_constraintHorizontal_bias="0.5"
app:layout_constraintStart_toStartOf="parent"
app:layout_constraintTop_toBottomOf="@+id/bt_Test">

    <Button
        android:id="@+id/bTM"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/easy_color"
        android:fontFamily="@font/funny_font"
        android:text="@string/tx_minus"
        android:textColor="@color/white"
        android:textSize="30sp"
        tools:ignore="TextContrastCheck" />

</androidx.cardview.widget.CardView>

<androidx.cardview.widget.CardView
android:id="@+id/bt_Medium"
android:layout_height="wrap_content"
android:layout_marginBottom="8dp"
android:layout_width="match_parent"

app:cardCornerRadius="20dp"
app:layout_constraintBottom_toTopOf="@+id/bt_"
app:layout_constraintEnd_toEndOf="@+id/bt_"
app:layout_constraintHorizontal_bias="0.5"
app:layout_constraintStart_toStartOf="@+id/bt_"
app:layout_constraintTop_toBottomOf="@+id/btE">

    <Button
        android:id="@+id/bTMu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:backgroundTint="@color/medium_color"
        android:fontFamily="@font/funny_font"
        android:text="@string/tx_multiply"
        android:textColor="@color/white"
        android:textSize="30sp"
        tools:ignore="TextContrastCheck" />


</androidx.cardview.widget.CardView>

<androidx.cardview.widget.CardView
android:id="@+id/bt_"
android:layout_height="wrap_content"
android:layout_width="match_parent"

app:cardCornerRadius="20dp"
app:layout_constraintBottom_toBottomOf="parent"
app:layout_constraintEnd_toEndOf="parent"
app:layout_constraintHorizontal_bias="0.5"
app:layout_constraintStart_toStartOf="parent"
app:layout_constraintTop_toBottomOf="@+id/bt_Medium">

    <Button
        android:id="@+id/bTD"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:backgroundTint="@color/hard_color"
        android:fontFamily="@font/funny_font"
        android:text="@string/tx_divide"
        android:textColor="@color/white"
        android:textSize="30sp" />


</androidx.cardview.widget.CardView>

<androidx.cardview.widget.CardView
android:backgroundTint="@color/black"
android:id="@+id/cardView6"
android:layout_height="wrap_content"
android:layout_marginTop="48dp"
android:layout_width="0dp"
app:cardCornerRadius="15dp"
app:layout_constraintEnd_toEndOf="@+id/bt_Test"
app:layout_constraintStart_toStartOf="@+id/bt_Test"
app:layout_constraintTop_toTopOf="parent">

<TextView
    android:fontFamily="@font/funny_font"
    android:id="@+id/txInChooseLevelFragment"
    android:layout_gravity="center"
    android:layout_height="wrap_content"
    android:layout_width="wrap_content"
    android:text="@string/name_game_label"
    android:textColor="@color/white"
    android:textSize="48sp" />
</androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:backgroundTint="@color/cardview_dark_background"
        app:cardCornerRadius="15dp"
        app:layout_constraintBottom_toTopOf="@+id/bt_Test"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/bt_Test">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/funny_font"
            android:text="@string/tx_choose_type"
            android:textColor="@color/white"
            android:textSize="40sp" />

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>