<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_row="3"
    android:layout_gravity="center"
    android:layout_weight="3"
    android:background="@drawable/fon_math"
    android:padding="8dp"
    tools:context="com.example.presentation.fragments.GameFragment">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        app:cardBackgroundColor="@color/black"
        app:cardCornerRadius="15dp"
        app:layout_constraintBottom_toTopOf="@+id/tv_Sum"
        app:layout_constraintEnd_toEndOf="@+id/tv_Timer"
        app:layout_constraintStart_toStartOf="@+id/tv_Timer"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:fontFamily="@font/funny_font"
            android:gravity="center"
            android:text="@string/name_game_label"
            android:textColor="@color/white"
            android:textSize="48sp" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tv_Timer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/funny_font"
        android:textColor="@color/white"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView14"
        app:layout_constraintEnd_toEndOf="@+id/tv_Sum"
        app:layout_constraintStart_toStartOf="@+id/tv_Sum"
        app:layout_constraintTop_toTopOf="@+id/textView14" />

    <TextView
        android:id="@+id/tv_Sum"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginBottom="8dp"
        android:background="@color/black"
        android:fontFamily="@font/funny_font"
        android:gravity="center"
        android:textColor="@color/design_default_color_background"
        android:textSize="65sp"
        app:layout_constraintBottom_toTopOf="@+id/tv_LeftNum"
        app:layout_constraintEnd_toEndOf="@+id/tvAnswer"
        app:layout_constraintStart_toStartOf="@+id/tvAnswer" />

    <TextView
        android:id="@+id/tv_LeftNum"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:background="@color/black"
        android:fontFamily="@font/funny_font"
        android:gravity="center"
        android:textColor="@color/design_default_color_background"
        android:textSize="65sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView14"
        app:layout_constraintEnd_toStartOf="@+id/tv_Sum"
        app:layout_constraintStart_toStartOf="@+id/tvAnswer"
        app:layout_constraintTop_toTopOf="@+id/textView14" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginBottom="8dp"
        android:background="#F1E9E9"
        android:fontFamily="@font/funny_font"
        android:gravity="center"
        android:text="@string/sumvol"
        android:textColor="@color/design_default_color_on_secondary"
        android:textSize="65sp"
        app:layout_constraintBottom_toTopOf="@+id/tvAnswer"
        app:layout_constraintEnd_toEndOf="@+id/tvAnswer"
        app:layout_constraintStart_toEndOf="@+id/tv_Sum" />

    <TextView
        android:id="@+id/tvAnswer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:background="#0E0E0E"
        android:fontFamily="@font/funny_font"
        android:gravity="center_vertical"
        android:text="@string/answer"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/progressBar"
        app:layout_constraintEnd_toEndOf="@+id/progressBar"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/progressBar" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#090909"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.168"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:elevation="3dp"
        android:orientation="horizontal"
        android:weightSum="3"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="@+id/progressBar"
        app:layout_constraintStart_toStartOf="@+id/progressBar">

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:backgroundTint="@color/black"
            app:cardCornerRadius="20dp">

            <Button
                android:id="@+id/tx3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/black"
                android:fontFamily="@font/funny_font"
                android:padding="2dp"

                android:textColor="@color/white"
                android:textSize="65sp" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:backgroundTint="@color/black"
            app:cardCornerRadius="20dp">

            <Button
                android:id="@+id/tx1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:backgroundTint="@color/black"
                android:fontFamily="@font/funny_font"
                android:padding="2dp"
                android:textColor="@color/white"
                android:textSize="65sp" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:backgroundTint="@color/black"
            app:cardCornerRadius="20dp">

            <Button
                android:id="@+id/tx2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:backgroundTint="@color/black"
                android:fontFamily="@font/funny_font"
                android:padding="2dp"
                android:textColor="@color/white"
                android:textSize="65sp" />
        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:elevation="3dp"
        android:orientation="horizontal"
        android:weightSum="3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/progressBar"
        app:layout_constraintStart_toStartOf="@+id/progressBar">

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:backgroundTint="@color/black"
            app:cardCornerRadius="20dp">

            <Button
                android:id="@+id/tx4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:backgroundTint="@color/black"
                android:fontFamily="@font/funny_font"
                android:padding="2dp"
                android:textColor="@color/white"
                android:textSize="65sp" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:backgroundTint="@color/black"
            app:cardCornerRadius="20dp">

            <Button
                android:id="@+id/tx5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:backgroundTint="@color/black"
                android:fontFamily="@font/funny_font"
                android:padding="2dp"
                android:textColor="@color/white"
                android:textSize="65sp" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:backgroundTint="@color/black"
            app:cardCornerRadius="20dp">

            <Button
                android:id="@+id/tx6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:backgroundTint="@color/black"
                android:fontFamily="@font/funny_font"
                android:padding="2dp"
                android:textColor="@color/white"
                android:textSize="65sp" />
        </androidx.cardview.widget.CardView>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>